# end-to-end

./: README.md
abandoned-objects/: README.md  abandoned_objects.py
camera_vandalism/: Camera-Vandalism-API-document.ipynb  Readme.md  alert.txt  camera_vandalism.py  demo.py  multiple_wrapper.py
camera_vandalism/.ipynb_checkpoints/: Camera-Vandalism-API-document-checkpoint.ipynb
face_matching/: Readme.md  Untitled.ipynb  face_matching_in_wild.py  face_matchingv1.0.html  face_matchingv1.0.ipynb  multiple_instance_wrapper_fm.py
face_matching/.ipynb_checkpoints/: face_matchingv1.0-checkpoint.ipynb
facial-recognition/: facial_reconition.py
facial-recognition/.ipynb_checkpoints/: Facial Recognition-checkpoint.ipynb  pms_face_recognition-checkpoint.ipynb
intrusion-v2/: intrusion.ipynb  intrusion_detection.py
intrusion-v2/src/: estimator.py
realtime-car-analytics/: Car-Analytics-API-Doc.ipynb  README.md  Untitled.ipynb  car_analytics_web_roi.py  car_analytics_with_roi_selector.py  car_analytics_without_roi.py  demo_api.py
realtime-car-analytics/.ipynb_checkpoints/: Car-Analytics-API-Doc-checkpoint.ipynb
realtime-car-analytics/applications/traffic_signal_violation_detection/: traffic_signal_violation_detection.py
realtime-car-analytics/apps/counting_cars/: countingCars.py
realtime-car-analytics/apps/direction_detection/: direction_detection.py
realtime-car-analytics/apps/speed_estimation/: speed_estimation.py
realtime-car-analytics/darkflow/darkflow/: defaults.py
realtime-car-analytics/deep_sort/: generate_detections.py
slip-and-fall-detection/: Readme.md  Slip and Fall Detection API.html  multiprocessing_wrapper.py  slip_and_fall.py
slip-and-fall-detection/.ipynb_checkpoints/: Slip and Fall Detection API-checkpoint.ipynb  Video-Synopsis-And-Reverse-Object-Search-checkpoint.ipynb  slip-and-fall-checkpoint.ipynb
vehicle-counter/: run_multiple_instances-BACKUP.py  run_multiple_instances.py  vehicle_counter.py
video-synopsis/: Readme.md  Video-Synopsis-And-Reverse-Object-Search.ipynb  demo.py  multiprocessing_wrapper.py  video_synopsis.py
video-synopsis/.ipynb_checkpoints/: Video-Synopsis-And-Reverse-Object-Search-checkpoint.ipynb
video-synopsis/darknet/: CMakeLists.txt  bad.list  run-yolo-video.py
video-synopsis/darknet/src/: darknet.c  detector.c  image.c  image.h
video-synopsis/deep_sort/: deep_sort_app.py  generate_detections.py  run-command.sh  test-dict.py
video-synopsis/deep_sort/application_util/: image_viewer.py  visualization.py
video-synopsis/utils/deep_sort_tracking/: deep_sort_tracking_helper.py
video-synopsis/utils/video_merge/: video_merge_helper.py
video-synopsis/utils/video_to_frames/: video_to_frames_helper.py
(+12 files in other folders)
